tests/parser/bad/lib/lmodule-with.scillib
(* missing library declaration *)

type House =
| Kind of String
